<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConfirmTransferActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/confirm_transfer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingVertical="10dp"
            android:paddingEnd="16dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/confirm_transfer_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textStyle="bold"
                android:lineSpacingExtra="7.2sp"
                android:maxLines="2"
                android:textSize="18sp"
                android:text="Confirm &amp; Pay" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/confirm_transfer_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/light_yellow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/you_are_making_a_transfer_of"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/amount_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                android:lineSpacingExtra="7.2sp"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="N200.00" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:alpha="0.6"
                    android:textColor="@color/dim_gray"
                    android:letterSpacing="-0.01"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/source_account" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/source_account_textView"
                    android:layout_marginTop="10dp"
                    android:text="Merciful Afolabi"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/source_account_no_textView"
                    android:layout_marginTop="5dp"
                    android:text="1234567890"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:alpha="0.6"
                    android:textColor="@color/dim_gray"
                    android:letterSpacing="-0.01"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/destination_account" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/destination_account_textView"
                    android:layout_marginTop="10dp"
                    android:text="Tamtam Mills"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/destination_account_no_textView"
                    android:layout_marginTop="5dp"
                    android:text="0987654321"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next_btn"
            android:text="@string/confirm_transfer"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@drawable/item_button_background"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>